--- a/slides/index.html
+++ b/slides/index.html
@@ -47,29 +47,24 @@
 
 
 <section>
-<section id="slide-org3845ec8">
-<h2 id="org3845ec8">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-org4d81edd">
+<h2 id="org4d81edd">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace site</a></li>
 <li>Week 0: <a href="./intro_notes-2020.html">Module overview</a></li>
-<li>Week 1: <a href="./python_notes.html">Introduction to Python</a> / Tutorial <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
-<li>Weeks 2-4: Differential balances
-<ul>
-<li><a href="./mass_notes.html">Mass and species balances</a> / Tutorial  <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week2.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week2.ipynb">colab</a></li>
-<li><a href="./energy_notes.html">Energy balances</a> / Tutorial</li>
-<li><a href="./momentum_notes.html">Momentum/force balances</a> / Tutorial</li>
-
-</ul></li>
-<li>Weeks 5-8: <a href="./ode_notes.html">Ordinary differential equations</a> / Tutorial</li>
-<li>Weeks 9-10: <a href="./multivariate_notes.html">Multivariate calculus</a> / Tutorial</li>
+<li>Week 1: <a href="./python_notes.html">Introduction to Python</a> / Tutorial: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
+<li>Weeks 2-4: Differential balances</li>
+<li>Weeks 5-8: Ordinary differential equations</li>
+<li>Weeks 9-10: Multivariate calculus</li>
 
 </ul>
+
 
 </section>
 </section>
 <section>
-<section id="slide-orgd98ed58">
-<h2 id="orgd98ed58">Introduction to Python</h2>
+<section id="slide-orgdd5049d">
+<h2 id="orgdd5049d">Introduction to Python</h2>
 <p>
 Week 1
 </p>
@@ -81,79 +76,6 @@ Sorry, your browser does not support SVG.</object></a> or <a href="https://colab
 Sorry, your browser does not support SVG.</object></a></li>
 
 </ul>
-
-</section>
-</section>
-<section>
-<section id="slide-orgc2ed871">
-<h2 id="orgc2ed871">Differential balances</h2>
-<p>
-Weeks 2-4
-</p>
-
-<ul>
-<li><a href="./mass_notes.html">Mass and species balances</a></li>
-<li><a href="./energy_notes.html">energy balances</a></li>
-<li><a href="./momentum_notes.html">Momentum/force balances</a></li>
-
-</ul>
-
-
-</section>
-<section id="slide-org8d65bdc">
-<h3 id="org8d65bdc">Mass and species balances</h3>
-</section>
-<section id="slide-org66b71de">
-<h3 id="org66b71de">Energy balance</h3>
-</section>
-<section id="slide-org3659912">
-<h3 id="org3659912">Momentum and force balances</h3>
-
-</section>
-</section>
-<section>
-<section id="slide-org7f28208">
-<h2 id="org7f28208">Ordinary differential equations</h2>
-<p>
-Weeks 5-8
-</p>
-
-<ul>
-<li><a href="./ode_notes.html">Ordinary differential equations</a>: weeks 5-8</li>
-
-</ul>
-
-</section>
-<section id="slide-org3fbab03">
-<h3 id="org3fbab03">First order</h3>
-</section>
-<section id="slide-org1e75c65">
-<h3 id="org1e75c65">Second order</h3>
-</section>
-<section id="slide-orgeda3ff7">
-<h3 id="orgeda3ff7">Numerical methods</h3>
-
-</section>
-</section>
-<section>
-<section id="slide-orgfcce7a4">
-<h2 id="orgfcce7a4">Multivariate calculus</h2>
-<p>
-Weeks 9-10
-</p>
-
-<ul>
-<li><a href="./multivariate_notes.html">Multivariate calculus</a>: weeks 9-10</li>
-
-</ul>
-
-</section>
-<section id="slide-org6006628">
-<h3 id="org6006628">Partial derivatives</h3>
-
-</section>
-<section id="slide-org8a90cb9">
-<h3 id="org8a90cb9">Multiple integration</h3>
 </section>
 </section>
 </div>
