--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -47,8 +47,8 @@
 
 
 <section>
-<section id="slide-org328627e">
-<h2 id="org328627e">Navigation instructions</h2>
+<section id="slide-org6cf5e43">
+<h2 id="org6cf5e43">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -73,8 +73,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgfd2b663" data-audio-src="intro/title.ogg">
-<h2 id="orgfd2b663">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org407b607" data-audio-src="intro/title.ogg">
+<h2 id="org407b607">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -98,8 +98,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org1b95ba3" data-audio-src="intro/overview.ogg">
-<h2 id="org1b95ba3">Overview</h2>
+<section id="slide-org0968201" data-audio-src="intro/overview.ogg">
+<h2 id="org0968201">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Chris Boyle, Umair Jamal, and Tom Stavert</li>
@@ -180,8 +180,8 @@ course.
 </section>
 </section>
 <section>
-<section id="slide-org086a62b" data-audio-src="intro/componentsofassessment.ogg">
-<h2 id="org086a62b">Components of assessment</h2>
+<section id="slide-org9c29a7a" data-audio-src="intro/componentsofassessment.ogg">
+<h2 id="org9c29a7a">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -255,8 +255,8 @@ semester 2.
 </section>
 </section>
 <section>
-<section id="slide-org7d55f84" data-audio-src="intro/keylearningobjectives.ogg">
-<h2 id="org7d55f84">Key learning objectives</h2>
+<section id="slide-orgc3f1f04" data-audio-src="intro/keylearningobjectives.ogg">
+<h2 id="orgc3f1f04">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
@@ -315,11 +315,12 @@ solved analytically.
 
 </aside>
 
+
 </section>
 </section>
 <section>
-<section id="slide-org27be1b7" data-audio-src="intro/prerequisites.ogg">
-<h2 id="org27be1b7">Prerequisites</h2>
+<section id="slide-org4f47a5a" data-audio-src="intro/prerequisites.ogg">
+<h2 id="org4f47a5a">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -375,8 +376,8 @@ that you are confident that you understand them thoroughly.
 </section>
 </section>
 <section>
-<section id="slide-org53d4eae" data-audio-src="intro/schedule.ogg">
-<h2 id="org53d4eae">Schedule</h2>
+<section id="slide-org73ffafd" data-audio-src="intro/schedule.ogg">
+<h2 id="org73ffafd">Schedule</h2>
 <ul>
 <li>Week 1: Python and its applications</li>
 <li>Weeks 2-4: Differential balances</li>
@@ -439,8 +440,122 @@ materials.
 </section>
 </section>
 <section>
-<section id="slide-org3e66ae4" data-audio-src="intro/learningmaterials.ogg">
-<h2 id="org3e66ae4">Learning resources</h2>
+<section id="slide-org3b25d8e" data-audio-src="intro/format.ogg">
+<h2 id="org3b25d8e">Format</h2>
+<ul>
+<li>tutorial worksheets
+<ul>
+<li>released at the beginning of the week</li>
+<li>uploaded  in by Monday at midnight</li>
+<li>fully worked model solutions released on Tuesday</li>
+<li>peer assessment of two other tutorials</li>
+
+</ul></li>
+<li>lectures and Q&amp;A sessions on Mondays and Thursdays</li>
+
+</ul>
+
+
+<aside class="notes">
+<p>
+
+</p>
+
+
+
+<p>
+The only way to learn things is by doing, and to learn mathematics and
+problem solving you have to solve problems!  As a result, the module
+will be driven by the tutorials.  Most of your learning will take
+place as you are struggling with the tutorial questions.
+</p>
+
+<p>
+The tutorial worksheets will be released at the beginning of the week.
+I recommend you take a look at the questions and begin to attempt
+answering them ahead of the Thursday Q&amp;A sessions, so that you can ask
+any questions that you may have.  If you post your questions on the
+Myplace forum ahead of the Thursday session, I may be able to prepare
+materials ahead of time.
+</p>
+
+<p>
+Your solutions to the tutorial questions should be submitted on
+Myplace by midnight on Monday.  Even though you will be working in
+groups to solve the tutorials, you should submit your own individual
+solutions to the Myplace site.  On the following day, fully worked
+model solutions will be released on Myplace.
+</p>
+
+<p>
+As part of the process, you will be asked to evaluate and give
+comments on two other students' tutorial solutions.  One purpose of
+this is to give helpful comments to where students could improve their
+work and they way it is documented.  The other purpose of this is to
+ensure that you have looked at and understand the model solutions.
+</p>
+
+
+
+<p>
+As mentioned previously, the lectures and Q&amp;A sessions will take place
+on Mondays and Thursdays.  These will be hour-long, on-line Zoom
+meetings where new material will be delivered and where you have a
+chance to ask questions.
+</p>
+
+
+<p>
+For most of you, a new aspect of this module will be Python
+programming or programming in general.  The key aspect of programming
+is that it allows you to solve repetitive tasks, such as sorting
+lists and recognizing faces.
+</p>
+
+<p>
+So far on the course, and in your education as a whole, you have
+worked through a lot of problems, either following example worked
+solutions or solving tutorial and coursework problems.  Most likely
+you have solved these problems as "single one-offs".  That is you have
+done the calculations by hand, and if you were asked resolve the
+problem at a later time, you would have to perform the calculations
+all over again.  Also, if you were asked the same question, but with
+slightly changed starting numbers, you would still have to perform all
+your calculations again.
+</p>
+
+<p>
+A key benefit of programming is that it allows you to write a code to
+solve these problems "once".  The code provides clear documentation of
+what calculations you actually have done, and if you find a mistake,
+you can simply fix the code and let the computer perform the
+calculations again for you.  In addition, if you write your code more
+generally, you can use it to solve a wide range of problems, without
+any need to alter the code.  All you need to do is change the input.
+</p>
+
+<p>
+Computers are not very smart, and being able to tell a computer how to
+precisely solve a problem means you have really understood the
+solution.  
+</p>
+
+<p>
+By the end of this module, I hope that you will be able to have a set
+of software tools that you have developed that will allow you to solve
+a wide variety of chemical engineering problems, and that you will be
+able to use these tools you have developed in your further career.
+</p>
+
+</aside>
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-org7e8fec0" data-audio-src="intro/learningmaterials.ogg">
+<h2 id="org7e8fec0">Learning resources</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -487,8 +602,8 @@ whole.
 </section>
 </section>
 <section>
-<section id="slide-orge08c3af" data-audio-src="intro/additionalresources.ogg">
-<h2 id="orge08c3af">Additional resources</h2>
+<section id="slide-org7b6d9ac" data-audio-src="intro/additionalresources.ogg">
+<h2 id="org7b6d9ac">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
@@ -547,8 +662,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org3a6b5f1" data-audio-src="intro/questions.ogg">
-<h2 id="org3a6b5f1">Questions?</h2>
+<section id="slide-orge6dccc8" data-audio-src="intro/questions.ogg">
+<h2 id="orge6dccc8">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
