--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -22,6 +22,7 @@
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
 <div class="reveal">
@@ -47,8 +48,8 @@
 
 
 <section>
-<section id="slide-org83c7027">
-<h2 id="org83c7027">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgdda3307">
+<h2 id="orgdda3307">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -63,8 +64,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgec60355">
-<h2 id="orgec60355">Overview</h2>
+<section id="slide-org5d25665">
+<h2 id="org5d25665">Overview</h2>
 <ul>
 <li>Cooling of a material</li>
 <li>Fire piston</li>
@@ -75,37 +76,84 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org850e712">
-<h2 id="org850e712">Cooling of a metal sphere</h2>
+<section id="slide-orge775a35">
+<h2 id="orge775a35">Balance equation</h2>
+<div>
+\begin{align*}
+{\rm accumulation} 
+&= {\rm inflow} - {\rm outflow}
++ {\rm generation}
+\end{align*}
+
+</div>
+
+<ul>
+<li>accumulation: \(\Delta (mU)\)</li>
+<li>flow terms:
+<ul>
+<li>convective heat transfer: \(hS(T-T_\infty)\) &Delta; t</li>
+<li>radiative heat transfer: \(\sigma S T^{4}\)</li>
+<li>convection with mass: \(\dot{m} H\) &Delta;</li>
+<li>work: \(F \Delta x\) or \(- p \Delta V\)</li>
+
+</ul></li>
+<li>generation:
+<ul>
+<li>\(\Delta H_{\rm rxn} \Delta\alpha\)</li>
+
+</ul></li>
+
+</ul>
+
+
 </section>
 </section>
 <section>
-<section id="slide-org5f3bbee">
-<h2 id="org5f3bbee">Fire piston</h2>
-<div class="outline-text-2" id="text-org5f3bbee">
+<section id="slide-orgbe167df">
+<h2 id="orgbe167df">Cooling of a metal sphere</h2>
+
+</section>
+</section>
+<section>
+<section id="slide-org4a6434d">
+<h2 id="org4a6434d">Fire piston</h2>
+<div class="outline-text-2" id="text-org4a6434d">
 </div>
 </section>
-<section id="slide-orga793f9d">
-<h3 id="orga793f9d">Background</h3>
+<section id="slide-orge33f307">
+<h3 id="orge33f307">Fire piston: Background</h3>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </section>
-<section id="slide-orgaf1f590">
-<h3 id="orgaf1f590">Energy balance</h3>
+<section id="slide-org13d8924">
+<h3 id="org13d8924">Fire piston: Energy balance</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org36102f0">
-<h2 id="org36102f0">Expansion engine</h2>
+<section id="slide-orgb420959">
+<h2 id="orgb420959">Refrigeration</h2>
+
 </section>
 </section>
 <section>
-<section id="slide-org7208d8e">
-<h2 id="org7208d8e">Summary</h2>
+<section id="slide-org7fc3376">
+<h2 id="org7fc3376">Expansion engine</h2>
+<div>
+\begin{align*}
+\end{align*}
+
+</div>
+
+
+</section>
+</section>
+<section>
+<section id="slide-orge71f36f">
+<h2 id="orge71f36f">Summary</h2>
 <aside class="notes">
 nil
 </aside>
