--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -48,8 +48,8 @@
 
 
 <section>
-<section id="slide-orgdda3307">
-<h2 id="orgdda3307">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org564f83f">
+<h2 id="org564f83f">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -64,20 +64,22 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org5d25665">
-<h2 id="org5d25665">Overview</h2>
+<section id="slide-org0869db7">
+<h2 id="org0869db7">Overview</h2>
 <ul>
+<li>Heating a material</li>
 <li>Cooling of a material</li>
 <li>Fire piston</li>
-<li>Expansion engine</li>
+<li>Refrigeration</li>
 
 </ul>
+
 
 </section>
 </section>
 <section>
-<section id="slide-orge775a35">
-<h2 id="orge775a35">Balance equation</h2>
+<section id="slide-orgdcbc91b">
+<h2 id="orgdcbc91b">Balance equation: Energy</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -93,13 +95,13 @@ nil
 <ul>
 <li>convective heat transfer: \(hS(T-T_\infty)\) &Delta; t</li>
 <li>radiative heat transfer: \(\sigma S T^{4}\)</li>
-<li>convection with mass: \(\dot{m} H\) &Delta;</li>
+<li>convection with mass: \(\dot{m} H \Delta t\)</li>
 <li>work: \(F \Delta x\) or \(- p \Delta V\)</li>
 
 </ul></li>
 <li>generation:
 <ul>
-<li>\(\Delta H_{\rm rxn} \Delta\alpha\)</li>
+<li>chemical reaction: \(\Delta H_{\rm rxn} \Delta\alpha\)</li>
 
 </ul></li>
 
@@ -109,51 +111,58 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgbe167df">
-<h2 id="orgbe167df">Cooling of a metal sphere</h2>
+<section id="slide-org119d2fe">
+<h2 id="org119d2fe">Heating a material</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org4a6434d">
-<h2 id="org4a6434d">Fire piston</h2>
-<div class="outline-text-2" id="text-org4a6434d">
+<section id="slide-org1fe98ed">
+<h2 id="org1fe98ed">Cooling of a material</h2>
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-orgfafa381">
+<h2 id="orgfafa381">Fire piston</h2>
+<div class="outline-text-2" id="text-orgfafa381">
 </div>
 </section>
-<section id="slide-orge33f307">
-<h3 id="orge33f307">Fire piston: Background</h3>
+<section id="slide-org6ea1336">
+<h3 id="org6ea1336">Fire piston: Background</h3>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </section>
-<section id="slide-org13d8924">
-<h3 id="org13d8924">Fire piston: Energy balance</h3>
+<section id="slide-org38fccb1">
+<h3 id="org38fccb1">Fire piston: Energy balance</h3>
+
+</section>
+</section>
+<section>
+<section id="slide-org3ec6984">
+<h2 id="org3ec6984">Refrigeration</h2>
+
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgb420959">
-<h2 id="orgb420959">Refrigeration</h2>
+<section id="slide-org521cada">
+<h2 id="org521cada">Summary</h2>
+<ul>
+<li>Balance equation</li>
+<li>Heating a material</li>
+<li>Cooling of a material</li>
+<li>Fire piston</li>
+<li>Refrigeration</li>
 
-</section>
-</section>
-<section>
-<section id="slide-org7fc3376">
-<h2 id="org7fc3376">Expansion engine</h2>
-<div>
-\begin{align*}
-\end{align*}
-
-</div>
+</ul>
 
 
-</section>
-</section>
-<section>
-<section id="slide-orge71f36f">
-<h2 id="orge71f36f">Summary</h2>
 <aside class="notes">
 nil
 </aside>
