--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgc1fca11">
-<h2 id="orgc1fca11">Navigation instructions</h2>
+<section id="slide-orgd30f076">
+<h2 id="orgd30f076">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org875af8b" data-audio-src="python/title.ogg">
-<h2 id="org875af8b">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgb3c7909" data-audio-src="python/title.ogg">
+<h2 id="orgb3c7909">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -101,8 +101,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org54b6800" data-audio-src="python/">
-<h2 id="org54b6800">Overview</h2>
+<section id="slide-org2738d25" data-audio-src="python/">
+<h2 id="org2738d25">Overview</h2>
 <ul>
 <li>Jupyter notebooks</li>
 <li>Basic elements of Python</li>
@@ -187,8 +187,8 @@ to as far you want to go.
 </section>
 </section>
 <section>
-<section id="slide-org72c45f0">
-<h2 id="org72c45f0">Jupyter notebooks</h2>
+<section id="slide-org5a378b8">
+<h2 id="org5a378b8">Jupyter notebooks</h2>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -226,8 +226,8 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-orgd6b3400">
-<h2 id="orgd6b3400">binder</h2>
+<section id="slide-org743cbc8">
+<h2 id="org743cbc8">binder</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29814&amp;code=d3~fUfZO0i6BIXbLrG8LPTO8TxihQo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -238,8 +238,8 @@ To follow along, open the Jupyter notebook: <a href="https://mybinder.org/v2/gh/
 </section>
 </section>
 <section>
-<section id="slide-orgbc7bb8e">
-<h2 id="orgbc7bb8e">Google Colab</h2>
+<section id="slide-orgc1b5279">
+<h2 id="orgc1b5279">Google Colab</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29815&amp;code=dd~rQcuNtpfbWJpjOH07dDfsrn3beyJ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -250,8 +250,8 @@ To follow along, open the Jupyter notebook: <a href="https://colab.research.goog
 </section>
 </section>
 <section>
-<section id="slide-org867bbec">
-<h2 id="org867bbec">Python as a calculator</h2>
+<section id="slide-orga5bfcf6">
+<h2 id="orga5bfcf6">Python as a calculator</h2>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -268,8 +268,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org6cf2df7">
-<h2 id="org6cf2df7">Example using variables</h2>
+<section id="slide-orgd872154">
+<h2 id="orgd872154">Example using variables</h2>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -286,15 +286,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org06995af">
-<h2 id="org06995af">Variables: Numbers and strings</h2>
+<section id="slide-org6811e52">
+<h2 id="org6811e52">Variables: Numbers and strings</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org54dbba8">
-<h2 id="org54dbba8">Variables: Lists</h2>
+<section id="slide-orgf000181">
+<h2 id="orgf000181">Variables: Lists</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -304,8 +304,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org0e8e229">
-<h2 id="org0e8e229">Variables: Dictionaries</h2>
+<section id="slide-orge490c76">
+<h2 id="orge490c76">Variables: Dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
@@ -313,8 +313,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org4a60fcd">
-<h2 id="org4a60fcd">Example using dictionaries</h2>
+<section id="slide-org8082547">
+<h2 id="org8082547">Example using dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -324,15 +324,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orge014fc3">
-<h2 id="orge014fc3">More advanced use of dictionaries</h2>
-<iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
+<section id="slide-orgca3096f">
+<h2 id="orgca3096f">More advanced use of dictionaries</h2>
+<iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31008&amp;code=cT~vNz0yrmdyodcJPeOFPCWsuvO7OEQ" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org5d63584">
-<h2 id="org5d63584">Importing libraries</h2>
+<section id="slide-org18d3bac">
+<h2 id="org18d3bac">Importing libraries</h2>
 <ul>
 <li>Matplotlib</li>
 <li>Numpy</li>
@@ -377,8 +377,8 @@ module, and that you will find extremely useful, include:
 </section>
 </section>
 <section>
-<section id="slide-org38773c1">
-<h2 id="org38773c1">importing numpy</h2>
+<section id="slide-orge2d6a7d">
+<h2 id="orge2d6a7d">importing numpy</h2>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -420,8 +420,8 @@ case, we can call a specific function within
 </section>
 </section>
 <section>
-<section id="slide-orgbae290c">
-<h2 id="orgbae290c">numpy</h2>
+<section id="slide-org4fba783">
+<h2 id="org4fba783">numpy</h2>
 <ul>
 <li>mathematical functions
 <ul>
@@ -455,8 +455,8 @@ from Python.  For example, if you want to take the sine of a
 </section>
 </section>
 <section>
-<section id="slide-orga79dfa4">
-<h2 id="orga79dfa4">matplotlib / pylab</h2>
+<section id="slide-org3d376f4">
+<h2 id="org3d376f4">matplotlib / pylab</h2>
 <ul>
 <li>Basic introduction: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_plotting.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_plotting.ipynb">colab</a></li>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
@@ -508,8 +508,8 @@ plots.
 </section>
 </section>
 <section>
-<section id="slide-org6bb2815">
-<h2 id="org6bb2815">Scipy</h2>
+<section id="slide-org350bd64">
+<h2 id="org350bd64">Scipy</h2>
 <ul>
 <li>non-linear equation solver: <code>fsolve</code> (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>numerical integration: <code>quad</code></li>
@@ -520,8 +520,8 @@ plots.
 </section>
 </section>
 <section>
-<section id="slide-org182b07c">
-<h2 id="org182b07c">Examples of using <code>fsolve</code></h2>
+<section id="slide-org7858deb">
+<h2 id="org7858deb">Examples of using <code>fsolve</code></h2>
 <ul>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1, alternate solution (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
@@ -541,8 +541,8 @@ plots.
 </section>
 </section>
 <section>
-<section id="slide-org047582c">
-<h2 id="org047582c">Sympy</h2>
+<section id="slide-org98c9593">
+<h2 id="org98c9593">Sympy</h2>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -562,8 +562,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orge599dc6">
-<h2 id="orge599dc6">Installation</h2>
+<section id="slide-org8cb0ba4">
+<h2 id="org8cb0ba4">Installation</h2>
 <p>
 If you are interested in installing Python directly on your computer,
 see the link <a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>.
@@ -590,8 +590,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-orgf729dfa">
-<h2 id="orgf729dfa">Summary</h2>
+<section id="slide-orge4e5560">
+<h2 id="orge4e5560">Summary</h2>
 <aside class="notes">
 nil
 </aside>
